--- a/jmeter/job/config.yaml
+++ b/jmeter/job/config.yaml
@@ -9,12 +9,12 @@ actions:
     tasks:
       - name: "Run jmeter smoke tests"
         files:
-          - jmeter/blazedemo.jmx
+          - jmeter/blazerdemo.jmx
         image: "docker.io/chichichin/jmeter:latest"
         args:
           - '-n'
           - '-t'
-          - '/keptn/jmeter/blazedemo.jmx'
+          - '/keptn/jmeter/blazerdemo.jmx'
           - '-JPROTOCOL=http'
           - '-JSERVER_PROTOCOL=http'
           - '-JVUCount=10'
