--- a/jmeter/job/config.yaml
+++ b/jmeter/job/config.yaml
@@ -10,7 +10,7 @@ actions:
       - name: "Run jmeter smoke tests"
         files:
           - jmeter/load200.jmx
-        image: "docker.io/chichichin/jmeter:latest"
+        image: "docker.io/chichichin/jmeter_prometheus:latest"
         args:
           - '-n'
           - '-t'
