--- a/shipyard.yaml
+++ b/shipyard.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "shipyard-delivery"
 spec:
   stages:
-    - name: "loadtest"
+    - name: "qa"
       sequences:
         - name: "loadtest-execution"
           tasks:
