--- a/jmeter/prometheus/sli.yaml
+++ b/jmeter/prometheus/sli.yaml
@@ -1,1 +1,5 @@
-abc
+spec_version: '1.0'
+indicators:
+  response_time_95pct: 'last_over_time(jmeter_response_time_summ{quantile="0.95"}[$DURATION_SECONDS])'
+  avg_response_time: 'rate(jmeter_response_time_summ_sum[$DURATION_SECONDS])/rate(jmeter_response_time_summ_count[$DURATION_SECONDS])'
+  tps: 'sum(rate(jmeter_request_total[$DURATION_SECONDS]))'
