--- a/jmeter/slo.yaml
+++ b/jmeter/slo.yaml
@@ -1,1 +1,31 @@
-abc
+spec_version: '0.1.0'
+comparision:
+  compare_with: "single_result"
+  include_result_with_score: "pass"
+  aggregate_function: avg
+objectives:
+  - sli: response_time_95pct
+    pass:
+      - criteria:
+          - "<1000"
+    warning:
+      - criteria:
+          - "<3000"
+  - sli: avg_response_time
+    pass:
+      - criteria:
+          - "<8000"
+    warning:
+      - criteria:
+          - "<1000"
+  - sli: tps
+    pass:
+      - criteria:
+          - ">10"
+    warning:
+      - criteria:
+          - "<5"
+
+total_score:
+  pass: "90%"
+  warning: "70%"
