--- a/jmeter/prometheus/sli.yaml
+++ b/jmeter/prometheus/sli.yaml
@@ -1,5 +1,5 @@
 spec_version: '1.0'
 indicators:
-  response_time_95pct: 'last_over_time(jmeter_response_time_summ{quantile="0.95"}[$DURATION_SECONDS])'
-  avg_response_time: 'rate(jmeter_response_time_summ_sum[$DURATION_SECONDS])/rate(jmeter_response_time_summ_count[$DURATION_SECONDS])'
-  tps: 'sum(rate(jmeter_request_total[$DURATION_SECONDS]))'
+  response_time_95pct: 'last_over_time(jmeter_response_time_as_summary{quantile="0.95"}[$DURATION_SECONDS])'
+  avg_response_time: 'rate(jmeter_response_time_as_summary_sum[$DURATION_SECONDS])/rate(jmeter_response_time_as_summary_count[$DURATION_SECONDS])'
+  tps: 'sum(rate(jmeter_count_total[$DURATION_SECONDS]))'
