--- a/jmeter/job/config.yaml
+++ b/jmeter/job/config.yaml
@@ -3,9 +3,9 @@ actions:
   - name: "Run JMeter"
     events:
       - name: "sh.keptn.event.test.triggered"
-        jsonpath:
-          property: "$.data.test.teststrategy"
-          match: "performance"
+        # jsonpath:
+        #   property: "$.data.test.teststrategy"
+        #   match: "performance"
     tasks:
       - name: "Run jmeter smoke tests"
         files:
