--- a/jmeter/prometheus/sli.yaml
+++ b/jmeter/prometheus/sli.yaml
@@ -4,3 +4,4 @@ indicators:
   response_time_95pct: 'last_over_time(jmeter_response_time_as_summary{quantile="0.95"}[$DURATION_SECONDS])'
   avg_response_time: 'sum_over_time(jmeter_response_time_as_summary_sum[$DURATION_SECONDS])/sum_over_time(jmeter_response_time_as_summary_count[$DURATION_SECONDS])'
   rps: 'sum(rate(jmeter_count_total[$DURATION_SECONDS]))'
+  count: 'sum_over_time(jmeter_count_total[$DURATION_SECONDS])'
