--- a/jmeter/prometheus/sli.yaml
+++ b/jmeter/prometheus/sli.yaml
@@ -2,6 +2,6 @@ spec_version: '1.0'
 indicators:
   success_rate: 'sum_over_time(jmeter_can_fail_success[$DURATION_SECONDS])/sum_over_time(jmeter_count_total[$DURATION_SECONDS])'
   response_time_95pct: 'last_over_time(jmeter_response_time_as_summary{quantile="0.95"}[$DURATION_SECONDS])'
-  avg_response_time: 'sum_over_time(jmeter_response_time_as_summary_sum[$DURATION_SECONDS])/sum_over_time(jmeter_response_time_as_summary_count[$DURATION_SECONDS])'
-  rps: 'rate(jmeter_count_total[$DURATION_SECONDS])'
+  avg_response_time: 'rate(jmeter_response_time_as_summary_sum[$DURATION_SECONDS])/rate(jmeter_response_time_as_summary_count[$DURATION_SECONDS])'
+  rps: 'sum(rate(jmeter_count_total[$DURATION_SECONDS]))'
   count: 'sum_over_time(jmeter_count_total[$DURATION_SECONDS])'
