--- a/jmeter/job/config.yaml
+++ b/jmeter/job/config.yaml
@@ -10,7 +10,7 @@ actions:
       - name: "Run jmeter smoke tests"
         files:
           - jmeter/loadPrometheus3.jmx
-        image: "docker.io/chichichin/jmeter_prometheus_change_port:latest"
+        image: "docker.io/chichichin/jmeter_prometheus_add_delay:1.1"
         args:
           - '-n'
           - '-t'
